--- a/machinetest/products/templates/products/product_list.html
+++ b/machinetest/products/templates/products/product_list.html
@@ -9,28 +9,22 @@
 <body class="container mt-4">
     <h1 class="mb-4">Product List</h1>
     <a href="{% url 'add_product' %}" class="btn btn-primary mb-3">Add New Product</a>
-    <table class="table table-bordered">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Price</th>
-                <th>Stock</th>
-                <th>Total Value</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for product in products %}
-            <tr>
-                <td>{{ product.name }}</td>
-                <td>{{ product.category }}</td>
-                <td>{{ product.price }}</td>
-                <td>{{ product.stock }}</td>
-                <td>{{ product.find_total_value }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    
+    <div class="row">
+        {% for product in products %}
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">Category: {{ product.category }} <br> 
+                    Price: Rs{{ product.price }} <br>
+                    Stock: {{ product.stock }} <br> 
+                    Total Value: Rs{{ product.find_total_value }}</p>
+                    </p>
+                </div>
+            </div>  
+        </div>
+        {% endfor %}
     
 </body>
 </html>
